[package]
name = "quorum"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = "0.13.4"
rand = "0.8"
thiserror = "2.0"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
hex = "0.4"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
